--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@ title: home
 ---
 <script src="//cdn.jsdelivr.net/npm/eruda"></script>
 <script>eruda.init();</script>
+
 <link rel='stylesheet' href="assets/css/main.css">
+
+
 <div class='landing'>
   <h1>Joel Lithgow</h1>
   <h2>Random seed string</h2>
   <img src="assets/media/test.jpg" alt='Testing image.' class='landing-image'>
 </div>
+
 <div id='about'>
   <p class='about-description'>Master of none, jack of all trades.</p>
 </div>
-<div id='projects'>
-  <p class='projects-title'>Recent projects</p>
-  <p class='projects-description'>These are some recent projects I've worked on.</p>
+
+<div id="artwork">
+  <h2 class='artwork__title'>Artwork</h2>
+  <div class="artwork__featured">
+    {% assign artwork__featured = site.artwork | where: "featured", true %}
+    <h4>{{ artwork__featured.title }}</h4>
+  </div>
 </div>
+
 <div id='newsroom'>
   <p class='newsroom-description'>Posts by/about/from me.</p>
   <ul class='newsroom-list'>
@@ -25,6 +34,7 @@ title: home
     </li>
   </ul>
 </div>
+
 <div id='contact'>
   <h3>Contact</h3>
   <ul class='contact-list'>
@@ -36,7 +46,3 @@ title: home
     </li>
   </ul>
 </div>
-    <script>
-      console.log("testing");
-      console.log("{{site.url}}")
-    </script>
