--- a/index.html
+++ b/index.html
@@ -5,28 +5,45 @@ title: home
 <script src="//cdn.jsdelivr.net/npm/eruda"></script>
 <script>eruda.init();</script>
 
-<link rel='stylesheet' href="assets/css/main.css">
+<link rel='stylesheet' href="assets/css/home.css">
 
 
-<div class='landing'>
-  <h1>Joel Lithgow</h1>
-  <h2>Random seed string</h2>
-  <img src="assets/media/test.jpg" alt='Testing image.' class='landing-image'>
-</div>
-
-<div id='about'>
-  <p class='about-description'>Master of none, jack of all trades.</p>
-</div>
-
-<div id="artwork">
-  <h2 class='artwork__title'>Artwork</h2>
-  <div class="artwork__featured">
-    {% assign artwork__featured = site.artwork | where: "featured", true %}
-    <h4>{{ artwork__featured.title }}</h4>
+<div class="about container">
+  <h2 class="container__header">Jack of all trades,<br>master of none.</h2>
+  <div class="container__body">
+    <p class="about__text">artist, designer, developer, I like to learn every part of the process and something more and stuff so lik eyeah should not get so caught up on this par of it.</p>
+    <img src="assets/images/avatar.jpg" alt='Portrait photo.' class='about__avatar'>
   </div>
+  <button class="container__footer about__button button-secondary">&gt; learn more about me</button>
 </div>
 
-<div id='newsroom'>
+<div class="artwork container container__theme_secondary">
+  <h2 class='container__header'>Artwork</h2>
+  <div class="container__body">
+    <div class="artwork__latest">
+      {% assign artwork__latest = site.artwork.last %}
+      <h3 class="artwork__type">/latest <span class="syantax-colon">:</span></h3>
+      <a href="{{ artwork__latest.url }}">
+        <h4 class="artwork__title button-inline">{{ artwork__latest.title }}</h4>
+      </a>
+      <img class="artwork__image" src="{% asset_path thumbnail.jpg /artwork/rock_experiment_1 %}">
+      <p>{{ artwork.excerpt }}</p>
+      <ul class="artwork__latest_tags">
+        {% for tag in artwork__lastest.tags %}
+          <li class="artwork__latest_tag">{{ tag.name }}</li>
+        {% endfor %}
+      </ul>
+    </div>
+    <div class="artwork__featured">
+      {% assign artwork__featured = site.artwork | where: "featured", true %}
+      <h4>{{ artwork__featured.title }}</h4>
+    </div>
+  </div>
+  <button class="button-primary container__footer">&gt; see all artwork</button>
+</div>
+
+{% comment %}
+<div class='newsroom'>
   <p class='newsroom-description'>Posts by/about/from me.</p>
   <ul class='newsroom-list'>
     <li class='newsroom-item'>
@@ -34,14 +51,21 @@ title: home
     </li>
   </ul>
 </div>
+{% endcomment %}
 
-<div id='contact'>
-  <h3>Contact</h3>
-  <ul class='contact-list'>
+<div class='social'>
+  <h3>Social</h3>
+  <ul class='social__list'>
     <li>
-      <p>Email: </p>
+      <p>/email :</p>
       <a href='mailto:joelnotlithgow@gmail.com'>
-        <p>joelnotlithgow@gmail.com</p>
+        joelnotlithgow@gmail.com
+      </a>
+    </li>
+    <li>
+      <p>/instagram :</p>
+      <a href="www.instagram.com/joellithgow">
+        joellithgow
       </a>
     </li>
   </ul>
