--- a/src/index.html
+++ b/src/index.html
@@ -46,19 +46,19 @@ title: home
 </div>
 {% endcomment %}
 
-<div class='social'>
-  <h3>Social</h3>
-  <ul class='social__list'>
-    <li>
-      <p>/email :</p>
-      <a href='mailto:joelnotlithgow@gmail.com'>
-        joelnotlithgow@gmail.com
+<div class="social container">
+  <h3 class="container__header">Social</h3>
+  <ul class="social__list container__body">
+    <li class="social__item container__block">
+      <h3>/email :</h3>
+      <a class="button-inline" href='mailto:joelnotlithgow@gmail.com'>
+        <h4>joelnotlithgow@gmail.com</h4>
       </a>
     </li>
-    <li>
-      <p>/instagram :</p>
-      <a href="www.instagram.com/joellithgow">
-        joellithgow
+    <li class="social__item container__block">
+      <h3>/instagram :</h3>
+      <a class="button-inline" href="www.instagram.com/joellithgow">
+        <h4>joellithgow</h4>
       </a>
     </li>
   </ul>
