changed around how buttons/links work, wip

--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,23 @@ title: home
 
 
 <div class="about container">
-  <h2 class="container__header">Jack of all trades,<br>master of none.</h2>
+  <a href="/about.html">
+    <h2 class="container__header">/Joel Lithgow</h2>
+  </a>
   <div class="container__body">
+    <h3>Jack of all trades,<br>master of none</h3>.
     <p class="about__text">artist, designer, developer, I like to learn every part of the process and something more and stuff so lik eyeah should not get so caught up on this par of it.</p>
     <img src="assets/images/avatar.jpg" alt='Portrait photo.' class='about__avatar'>
   </div>
-  <button class="container__footer about__button button-secondary">&gt; learn more about me</button>
+  <a href="/about.html">
+    <button class="container__footer about__button button-secondary">&gt; learn more about me</button>
+  </a>
 </div>
 
 <div class="artwork container container__theme_secondary">
-  <h2 class='container__header'>Artwork</h2>
+  <a href="/artwork">
+    <h2 class='container__header'>/Artwork</h2>
+  </a>
   <div class="container__body">
     
     <div class="container__block">
@@ -32,7 +39,9 @@ title: home
     </div>
 
   </div>
-  <button class="button-primary container__footer">&gt; see all artwork</button>
+  <a href="artwork/all.html">
+    <button class="button-primary container__footer">> see all artwork</button>
+  </a>
 </div>
 
 {% comment %}
@@ -47,18 +56,20 @@ title: home
 {% endcomment %}
 
 <div class="social container">
-  <h3 class="container__header">Social</h3>
+  <a href="/social.html">
+    <h2 class="container__header">/Social</h2>
+  </a>
   <ul class="social__list container__body">
     <li class="social__item container__block">
-      <h3>/email :</h3>
-      <a class="button-inline" href='mailto:joelnotlithgow@gmail.com'>
-        <h4>joelnotlithgow@gmail.com</h4>
+      <h3>- email : </h3>
+      <a href='mailto:joelnotlithgow@gmail.com'>
+        <h4 class="button-inline">joelnotlithgow@gmail.com</h4>
       </a>
     </li>
     <li class="social__item container__block">
-      <h3>/instagram :</h3>
-      <a class="button-inline" href="www.instagram.com/joellithgow">
-        <h4>joellithgow</h4>
+      <h3>- instagram : </h3>
+      <a href="www.instagram.com/joellithgow">
+        <h4 class="button-inline">joellithgow</h4>
       </a>
     </li>
   </ul>
