More styling + header format change.

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@ title: home
     <h2 class="container__header">/Joel Lithgow</h2>
   </a>
   <div class="container__body">
-    <h3>Jack of all trades,<br>master of none</h3>.
+    <h3>Jack of all trades,<br>master of none.</h3>
     <p class="about__text">artist, designer, developer, I like to learn every part of the process and something more and stuff so lik eyeah should not get so caught up on this par of it.</p>
     <img src="assets/images/avatar.jpg" alt='Portrait photo.' class='about__avatar'>
   </div>
@@ -61,13 +61,13 @@ title: home
   </a>
   <ul class="social__list container__body">
     <li class="social__item container__block">
-      <h3>- email : </h3>
+      <h3>- email <span class="syantax-colon">:</span></h3>
       <a href='mailto:joelnotlithgow@gmail.com'>
         <h4 class="button-inline">joelnotlithgow@gmail.com</h4>
       </a>
     </li>
     <li class="social__item container__block">
-      <h3>- instagram : </h3>
+      <h3>- instagram <span class="syantax-colon">:</span></h3>
       <a href="www.instagram.com/joellithgow">
         <h4 class="button-inline">joellithgow</h4>
       </a>
