--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@ title: home
     <p class="about__text">artist, designer, developer, I like to learn every part of the process and something more and stuff so lik eyeah should not get so caught up on this par of it.</p>
     <img src="assets/images/avatar.jpg" alt='Portrait photo.' class='about__avatar'>
   </div>
-  <a href="/about.html" class="container__footer" >
-    <button class="about__button button-secondary">&gt; learn more about me</button>
+  <a href="/about.html" class="container__footer about__button">
+    <button class="button-secondary">>learn more about me</button>
   </a>
 </div>
 
