added footer and fixed up spacing everything else.

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,12 @@ title: home
     <h2 class="container__header">/Joel Lithgow</h2>
   </a>
   <div class="container__body">
-    <h3>Jack of all trades,<br>master of none.</h3>
+    <h3 class="about__text">Jack of all trades,<br>master of none.</h3>
     <p class="about__text">artist, designer, developer, I like to learn every part of the process and something more and stuff so lik eyeah should not get so caught up on this par of it.</p>
     <img src="assets/images/avatar.jpg" alt='Portrait photo.' class='about__avatar'>
   </div>
   <a href="/about.html" class="container__footer about__button">
-    <button class="button-secondary">>learn more about me</button>
+    <button class="button-secondary">> learn more about me</button>
   </a>
 </div>
 
