--- a/src/artwork/all.html
+++ b/src/artwork/all.html
@@ -2,13 +2,16 @@
 title: artwork__all
 layout: default
 ---
-All artwork...
-<ul>
-  {% for artwork in site.artwork %}
-    <li>
-      <p>{{ artwork.title }}</p>
-      <p>{{ artwork.content }}</p>
-      <a href="{{ artwork.url }}">Link</a>
-    </li>
-  {% endfor %}
-</ul>
+<div class="container">
+  <h2 class="container__header">All Artwork</h2>
+
+  <ul class="container__body">
+    {% for artwork in site.artwork %}
+      <li class="container__block">
+        <p>{{ artwork.title }}</p>
+        <p>{{ artwork.content }}</p>
+        <a href="{{ artwork.url }}">Link</a>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
