Styling artwork page. WIP

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@ title: home
     </div>
 
   </div>
-  <a href="artwork/all.html" class="container__footer">
+  <a href="artwork/artworks.html" class="container__footer">
     <button class="button-primary">> see all artwork</button>
   </a>
 </div>
