Working on artworks section and card

--- a/src/artwork/artworks.html
+++ b/src/artwork/artworks.html
@@ -2,10 +2,12 @@
 title: artwork__all
 layout: default
 ---
+<!--
 <script src="//cdn.jsdelivr.net/npm/eruda"></script>
 <script>eruda.init();</script>
+-->
 
-<link rel="stylesheet" src="/assets/css/artworks.css">
+<link rel="stylesheet" href="/assets/css/artworks.css">
 
 
 <div class="container artworks">
@@ -14,7 +16,7 @@ layout: default
   <ul class="container__body artworks__list">
     {% for artwork in site.artwork %}
       <li class="container__block artworks__item">
-        {% include artwork-item.html artwork=artwork %}
+        {% include artwork-card.html artwork=artwork %}
       </li>
     {% endfor %}
   </ul>
