--- a/src/artwork/artworks.html
+++ b/src/artwork/artworks.html
@@ -2,22 +2,29 @@
 title: artwork__all
 layout: default
 ---
-<!--
 <script src="//cdn.jsdelivr.net/npm/eruda"></script>
 <script>eruda.init();</script>
--->
 
 <link rel="stylesheet" href="/assets/css/artworks.css">
 
 
 <div class="container artworks">
-  <h2 class="container__header">All Artwork</h2>
+  <div class="container__header">
+    <h2>All Artwork</h2>
+    <h3>{{ site.artwork | size }} results</h3>
+  </div>
 
-  <ul class="container__body artworks__list">
-    {% for artwork in site.artwork %}
-      <li class="container__block artworks__item">
-        {% include artwork-card.html artwork=artwork %}
-      </li>
-    {% endfor %}
-  </ul>
+  <div class="container__body">
+    <ul class="artworks__list">
+      {% for artwork in site.artwork %}
+        <li class="container__block artworks__item">
+          {% include artwork-card.html artwork=artwork %}
+        </li>
+      {% endfor %}
+    </ul>
+  </div>
+
+  <a href="/artwork" class="container__footer">
+    <p class="button-inline">read about my art practice</p>
+  </a>
 </div>
