Trying a latest feature on the home page. Commented out for the time being.

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,18 @@ title: home
   </a>
 </div>
 
+<!--
+<div class="latest container">
+  <h2 class="container__header">/Latest</h2>
+    <ul class="container__body">
+      {% include page-item.html label="Artwork" page=site.artwork.first %}
+      {% include page-item.html label="Blog" page=site.posts.first %}
+    </ul>
+  </h2>
+</div>
+-->
+
+<!--
 <div class="artwork container container__theme_secondary">
   <a href="/artwork">
     <h2 class='container__header'>/Artwork</h2>
@@ -45,30 +57,20 @@ title: home
     <button class="button-primary">> see all artwork</button>
   </a>
 </div>
-
-{% comment %}
-<div class='newsroom'>
-  <p class='newsroom-description'>Posts by/about/from me.</p>
-  <ul class='newsroom-list'>
-    <li class='newsroom-item'>
-      <p>Some text</p>
-    </li>
-  </ul>
-</div>
-{% endcomment %}
+-->
 
 <div class="social container">
   <a href="/social.html">
     <h2 class="container__header">/Social</h2>
   </a>
   <ul class="social__list container__body">
-    <li class="social__item container__block">
+    <li class="social__item">
       <h3>- email <span class="syantax-colon">:</span></h3>
       <a href='mailto:joelnotlithgow@gmail.com'>
         <h4 class="button-inline">joelnotlithgow@gmail.com</h4>
       </a>
     </li>
-    <li class="social__item container__block">
+    <li class="social__item">
       <h3>- instagram <span class="syantax-colon">:</span></h3>
       <a href="www.instagram.com/joellithgow">
         <h4 class="button-inline">joellithgow</h4>
