--- a/src/index.html
+++ b/src/index.html
@@ -35,18 +35,18 @@ title: home
 </div>
 -->
 
-<div class="artwork containerz">
-  <a href="/artwork">
+<div id="artwork" class="artwork containerz">
+  <a href="/artwork" class="containerz__header">
     <h2 class='banner'>/Artwork</h2>
   </a>
 
   {% assign artwork__latest = site.artwork.last %}
-  {% include artwork-item.html label="latest" artwork=artwork__latest %}
+  {% include artwork-item.html type="latest" artwork=artwork__latest %}
 
   {% assign artwork__featured = site.artwork | where_exp: "item", "item.featured == true and item != site.artwork.last" | sample %}
-  {% include artwork-item.html label="featured" artwork=artwork__featured %}
+  {% include artwork-item.html type="featured" artwork=artwork__featured %}
 
-  <a href="artwork/artworks.html" class="">
+  <a href="artwork/artworks.html" class="containerz__footer">
     <button class="button-primary">> see all artwork</button>
   </a>
 </div>
