--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@ title: home
   {% assign artwork__featured = site.artwork | where_exp: "item", "item.featured == true and item != site.artwork.last" | sample %}
   {% include artwork-item.html type="featured" artwork=artwork__featured %}
 
-  <a href="artwork/artworks.html" class="containerz__footer">
+  <a href="/artworks/" class="containerz__footer">
     <button class="button-primary">see all artwork</button>
   </a>
 </div>
