--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@ title: home
   {% assign artwork__featured = site.artwork | where_exp: "item", "item.featured == true and item != site.artwork.last" | sample %}
   {% include artwork-item.html type="featured" artwork=artwork__featured %}
 
-  <a href="/artworks/" class="containerz__footer">
-    <button class="button-primary">see all artwork</button>
+  <a href="/artwork/" class="containerz__footer">
+    <button class="button-primary">more about my practice</button>
   </a>
 </div>
 
