Changed how headings work (to act more bread crummy.

--- a/src/artwork/artworks.html
+++ b/src/artwork/artworks.html
@@ -11,8 +11,8 @@ permalink: /artworks/
 
 <div class="containerz artworks">
   <a href="/artwork/" class="banner">
-    <h2 class="">> Artwork</h2>
-    <h3>-- All</h3>
+    <h3>Artwork -</h3>
+    <h2 class="">> Artworks</h2>
   </a>
   <h3>{{ site.artwork | size }} results
     <!--<button class="button-secondary">Filter</button>-->
