--- a/src/artwork/index.html
+++ b/src/artwork/index.html
@@ -5,8 +5,9 @@ title: Artwork
 <link rel="stylesheet" href="/assets/css/artwork.css">
 
 <div class="containerz">
-  <a href="/artwork" class="containerz__header">
-    <h2 class="banner">> Artwork</h2>
+  <a href="/" class="banner">
+    <h3>jlithgow -</h3>
+    <h2>> Artwork</h2>
   </a>
   <div class="container-small">
     <h4>Artist Statement</h4>
