--- a/src/artwork/collection/index.html
+++ b/src/artwork/collection/index.html
@@ -6,7 +6,10 @@ permalink: /artwork/collections/
 <link rel="stylesheet" href="/assets/css/collections.css"></link>
 
 <div class="containerz">
-  <h2 class="banner">> Collections</h2>
+  <a href="/artwork/" class="banner">
+    <h3>Artwork -</h3>
+    <h2>> Collections</h2>
+  </a>
   <ul>
     {% assign collections =  site.artwork | map: 'collections' | join: ','  | split: ',' | uniq %}
     {% assign collectionz = site.artwork-collection %}
