--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@ title: home
   
   {% assign artwork__featured = site.artwork | where_exp: "item", "item.featured == true and item != site.artwork.last" | sample %}
   <h3>Featured( {{ artwork__featured.title }} )</h3>
-  {% include artwork-card.html type="featured" artwork=artwork__featured %}
+  {% include artwork-promo.html type="featured" artwork=artwork__featured %}
 
   <hr></hr>
 
