Added support for very screen size.

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@ title: home
 ---
 <link rel='stylesheet' href="assets/css/home.css">
 
-<div class="about containerz">
+<div class="about container">
   <a class="containerz__header" href="/about.html">
     <h2 class="banner">> Joel Lithgow</h2>
   </a>
@@ -28,7 +28,7 @@ title: home
 </div>
 -->
 
-<div id="artwork" class="artwork containerz">
+<div id="artwork" class="artwork container">
   <a href="/artwork" class="containerz__header">
     <h2 class='banner'>/ Artwork</h2>
   </a>
@@ -45,12 +45,14 @@ title: home
   
   <hr></hr>
 
-  <a href="/artwork/" class="containerz__footer">
-    <button class="button-primary">more about my practice</button>
-  </a>
+  <footer>
+    <a href="/artwork/">
+      <button class="button-primary">more about my practice</button>
+    </a>
+  </footer>
 </div>
 
-<div class="social containerz">
+<div class="social container">
   <a class="containerz__header" href="/social.html">
     <h2 class="banner">/ Social</h2>
   </a>
