BUG: no about page, added empty page.

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@ title: home
 <link rel='stylesheet' href="assets/css/home.css">
 
 <div class="about container">
-  <a class="containerz__header" href="/about.html">
+  <a class="containerz__header" href="/about/">
     <h2 class="banner">> Joel Lithgow</h2>
   </a>
   <div>
@@ -13,7 +13,7 @@ title: home
     <h3 class="about__text">Jack of all trades,<br>master of none.</h3>
     <p class="about__text">artist, designer, developer, I like to learn every part of the process and something more and stuff so lik eyeah should not get so caught up on this par of it.</p>
   </div>
-  <a href="/about.html">
+  <a href="/about/">
     <button class="button-secondary">learn more about me</button>
   </a>
 </div>
