--- a/src/artwork/index.html
+++ b/src/artwork/index.html
@@ -4,44 +4,59 @@ title: Artwork
 ---
 <link rel="stylesheet" href="/assets/css/artwork.css">
 
-<div class="containerz">
-  <a href="/" class="banner">
+<div class="container">
+  <header class="banner">
     <h3>jlithgow -</h3>
     <h2>> Artwork</h2>
-  </a>
-  <div class="container-small">
+  </header>
+
+  <section class="basic">
     <h4>Artist Statement</h4>
     <h5>updated: Jan 09, 2021</h5>
     <p>Wether I am the artist or just the machine I could not tell you. My work usually results in (describe print projects) or (describe machine god sculptures). Being born after "when it changed", my life has (un?)questionaly revolved around technology and machines (maybe instad of tech/machines say something like [those that require pieces together to function or some shit]. Something about divine artwork and setting uo the machine god ideaology.</p>
-  </div>
+  </section>
 
-  <a href="/artwork/collections" class="containerz__header">
-    <h2 class="banner">/ Collections</h2>
-  </a>
-  <div class="container-small">
+  <header class="banner">
+    <a href="/artwork/collections">
+      <h2>/ Collections</h2>
+    </a>
+  </header>
+
+  <section class="basic">
     {% for collection in site.artwork-collection %}
       {% include collection-list.html collection=collection %}
     {% endfor %}
-  </div>
+  </section>
   
-  <a href="/artworks" class="containerz__header">
-    <h2 class="banner">/ Artworks</h2>
-  </a>
-  <div class="container-small">
+  <header class="banner">
+    <a href="/artworks">
+      <h2>/ Artworks</h2>
+    </a>
+  </header>
+
+  <section class="basic">
     {% assign artwork-sample = site.artwork | sample %}
     <h3>Sample( {{ artwork-sample.title }} )</h3>
     {% include artwork-card.html artwork=artwork-sample %}
-  </div>
+  </section>
+
   <hr></hr>
-  <ul class="container-small">
+
+  <section class="basic">
     <h3>Latest( 3 )</h3>
-    {% assign artwork-latest = site.artwork | sort: 'date' | reverse %}
-    {% for artwork in artwork-latest limit:3 %}
-      <li>{% include artwork-item.html artwork=artwork %}</li>
-    {% endfor %}
-  </ul>
+    <ul>
+      {% assign artwork-latest = site.artwork | sort: 'date' | reverse %}
+      {% for artwork in artwork-latest limit:3 %}
+        <li>{% include artwork-item.html artwork=artwork %}</li>
+      {% endfor %}
+    </ul>
+  </section>
+
   <hr></hr>
-  <a href="/artworks" class="containerz__footer">
-    <button class="button-primary">See all Artwork</button>
-  </a>
+
+  <footer>
+    <a href="/artworks">
+      <button class="button-primary">See all Artwork</button>
+    </a>
+  </footer>
 </div>
