--- a/src/artwork/index.html
+++ b/src/artwork/index.html
@@ -56,7 +56,7 @@ title: Artwork
 
   <footer>
     <a href="/artworks">
-      <button class="button-primary">See all Artwork</button>
+      <button class="primary">See all Artwork</button>
     </a>
   </footer>
 </div>
