Design: Fixed header/breadcrumb thing

--- a/src/artwork/artworks.html
+++ b/src/artwork/artworks.html
@@ -13,10 +13,10 @@ permalink: /artworks/
 
 <div class="container theme--primary">
   <header class="banner">
-    <a href="/artwork/">
-      <h3>Artwork -</h3>
-      <h2>> Artworks</h2>
-    </a>
+    <h3><a href="/artwork/">
+      / artwork
+    </a></h3>
+    <h2>> all artwork</h2>
   </header>
 
   <h3>{{ site.artwork | size }} results
