--- a/src/artwork/index.html
+++ b/src/artwork/index.html
@@ -6,7 +6,9 @@ title: Artwork
 
 <div class="container">
   <header class="banner">
-    <h3>jlithgow -</h3>
+    <h3><a href="/">
+      / jlithgow
+    </a></h3>
     <h2>> Artwork</h2>
   </header>
 
